--- a/_inc/omh_schema_library.css
+++ b/_inc/omh_schema_library.css
@@ -13,3 +13,10 @@
     padding-bottom: 10px;
     margin-top: 0;
 }
+.omh-schema-library-alert-text {
+  color: #d00;
+}
+.update-button-disable-message {
+  display:inline-block;
+  padding-top: 5px;
+}
